fix column header alignment in datasets table

--- a/src/index.less
+++ b/src/index.less
@@ -672,3 +672,7 @@ The ant popover injects the list in the bottom of the body, and therefore it is 
   td.ant-table-cell {
     color: black
   }
+
+  .ant-table-thead > tr > th:last-child {
+   float: none !important;
+  }
